<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PlayerDetailActivity">


    <android.support.v7.widget.Toolbar
        android:id="@id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/title"
            style="@style/ToolbarTitleStyle"
            android:drawableLeft="@drawable/ic_logo"
            android:text="@string/team"
            android:textColor="@color/textColorPrimary" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/part1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/number"
                    android:layout_width="40dp"
                    android:layout_height="58dp"
                    android:layout_margin="15dp"
                    android:background="#e4003a"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@+id/number"
                    android:textColor="@color/text_color_navi"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/type"
                    android:layout_toRightOf="@+id/number"
                    android:textColor="#e4003a"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/name_en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:layout_toRightOf="@+id/number"
                    android:textColor="#e4003a"
                    android:textSize="15sp" />

                <cn.fcbayern.android.util.image.RecyclingImageView
                    android:id="@+id/image"
                    android:layout_width="130dp"
                    android:layout_height="230dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="-18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:paddingLeft="20dp"
                    android:text="@string/player_introduce"
                    android:textColor="#111111"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#111111" />

                <LinearLayout
                    android:id="@+id/intro_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:paddingLeft="20dp"
                    android:text="@string/player_experience"
                    android:textColor="#111111"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#111111" />

                <TextView
                    android:id="@+id/experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textColor="@color/text_color_navi"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
